likes and dislikes added, reply bug fixed, images fixed, critic and comment removed complete
likes and dislikes are not showing yes, but they're added to de db,
small bugs fixed,
missing another layer of replies + limitations of writing maybe

--- a/RottenTabaibos/public/css/style2.css
+++ b/RottenTabaibos/public/css/style2.css
@@ -84,7 +84,6 @@ form {
   -webkit-box-direction: normal;
           flex-flow: row wrap;
   margin: auto;
-  justify-content: space-around;
   width: 80%;
 }
 
@@ -107,9 +106,7 @@ form {
 
 .movie,
 .movie_more {
-  -webkit-box-flex: 20%;
-          flex: 20%;
-  width: 25%;
+  width: 20%;
   padding: 0 20px;
   margin-bottom: 20px;
 }
@@ -702,8 +699,8 @@ img.avatar {
   -webkit-appearance: button;
   -moz-appearance: button;
   appearance: button;
-  margin-bottom: 5px;
-  margin-top: 30px;
+  margin-bottom: 20px;
+  margin-top: 20px;
   margin-right: 10px;
   margin-left: 10px;
   border-radius: 20px 20px 20px 20px;
@@ -952,5 +949,53 @@ img.avatar {
   margin-top: 20px;
   float: right;
   width: 80%;
+}
+
+.browse_all {
+  padding: 5px 5px;
+  border-radius: 15px;
+}
+
+.browse_all:hover {
+  background-color: lightgrey;
+  cursor: pointer;
+}
+
+.center {
+  text-align: center;
+}
+
+.pagination_popular,
+.pagination_recent,
+.pagination_top {
+  display: inline-block;
+  text-decoration: none;
+}
+
+.pagination_popular a,
+.pagination_recent a,
+.pagination_top a {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  -webkit-transition: background-color 0.3s;
+  transition: background-color 0.3s;
+  border: 1px solid #ddd;
+  margin: 0 4px;
+}
+
+.pagination_popular a:hover,
+.pagination_recent a:hover,
+.pagination_top a:hover {
+  background-color: lightgrey;
+}
+
+.trailer {
+  margin: auto;
+}
+
+.images {
+  margin: auto;
 }
 
